split data into Xtrain ytrain and added another prediction value

--- a/Desktop/Research /CompetingTechnologies.ipynb
+++ b/Desktop/Research /CompetingTechnologies.ipynb
@@ -466,7 +466,8 @@
     "#How do I add the rest of the constraints to this model?\n",
     "\n",
     "data = { 'date':['2011-Q1', '2011-Q2', '2011-Q3', '2011-Q4', '2012-Q1', '2012-Q2', '2012-Q3', '2012-Q4', '2013-Q1', '2013-Q2', '2013-Q3', '2013-Q4', '2014-Q1', '2014-Q2', '2014-Q3', '2014-Q4', '2015-Q1', '2015-Q2', '2015-Q3', '2015-Q4', '2016-Q1', '2016-Q2', '2016-Q3', '2016-Q4', '2017-Q1', '2017-Q2', '2017-Q3', '2017-Q4', '2018-Q1', '2018-Q2', '2018-Q3', '2018-Q4',' 2019-Q1','2019-Q2','2019-Q3','2019-Q4','2020- Q1',' 2020- Q2',' 2020- Q3',' 2020- Q4',' 2021- Q1',' 2021- Q2',' 2021- Q3',' 2021- Q4',' 2022- Q1',' 2022- Q2',' 2022- Q3',' 2022- Q4',' 2023- Q1',' 2023- Q2',' 2023- Q3',' 2023- Q4',' 2024- Q1',' 2024- Q2',' 2024- Q3',' 2024- Q4'],\n",
-    "         'market_share_apple':['24.38','20.04','21.21','22.71','23.99','24.56','23.63','23.26','27.14','25.09','22.73','21.82','23.6','24.29','24.73','23.51','22.64','20.22','18.14','19.21','18.82','20.33','19.38','18.89','19.5','19.35','19.37','19.91','20.83','18.91','20.66','21.98','22.4','22.04','22.48','24.79','27.03','25.26','24.98','26.91','27.41','26.35','26.75','29.24','27.57','27.22','27.8','26.98','28.42','28.44','29.58','28.8','28.46','27.16','27.61','26.04']        \n",
+    "         'market_share_apple':['24.38','20.04','21.21','22.71','23.99','24.56','23.63','23.26','27.14','25.09','22.73','21.82','23.6','24.29','24.73','23.51','22.64','20.22','18.14','19.21','18.82','20.33','19.38','18.89','19.5','19.35','19.37','19.91','20.83','18.91','20.66','21.98','22.4','22.04','22.48','24.79','27.03','25.26','24.98','26.91','27.41','26.35','26.75','29.24','27.57','27.22','27.8','26.98','28.42','28.44','29.58','28.8','28.46','27.16','27.61','26.04'],\n",
+    "         ''      \n",
     "}\n",
     "# Strip leading/trailing spaces from 'date' strings\n",
     "data['date'] = [d.strip().replace(' ', '') for d in data['date']]\n",
@@ -484,14 +485,25 @@
     "\n",
     "#Convert market share to float \n",
     "df['market_share_apple'] = df['market_share_apple'].astype(float)\n",
+    "Y= df['market_share_apple']\n",
+    "X= df[['Apple_investment', 'Samsung_Research', 'android_price_average', 'iphone_prices', 'date']]\n",
+    "\n",
+    "#Split data into training and testing sets\n",
+    "X_train = X.iloc[0:40,:]\n",
+    "X_test = X.iloc[40:,:]\n",
+    "y_train = Y.iloc[0:40]\n",
+    "y_test = Y.iloc[40:]\n",
     "\n",
     "from statsmodels.tsa.arima.model import ARIMA\n",
-    "model = ARIMA(df['market_share_apple'], order=(1, 1, 1))\n",
+    "model = ARIMA(y_train, X_train, order=(1, 1, 0))\n",
+    "\n",
+    "\n",
     "model_fit = model.fit()\n",
     "print(model_fit.summary())\n",
     "\n",
     "# Forecast the next 4 quarters\n",
-    "forecast = model_fit.forecast(steps=4)\n",
+    "forecast = model_fit.forecast(steps=len(X_test), exogenous=X_test)\n",
+    "forecast.index = X_test.date\n",
     "\n",
     "# Create a datetime index for the forecast\n",
     "forecast_index = pd.date_range(start=df.index[-1], periods=5, freq='Q')[1:]  # Generate future dates\n",
@@ -505,7 +517,44 @@
     "plt.title('Apple Market Share Forecast')\n",
     "plt.legend()\n",
     "plt.show()\n",
-    "   \n"
+    "   \n",
+    "# Root Squared Error\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from math import sqrt\n",
+    "rmse = sqrt(mean_squared_error(y_test, forecast))\n",
+    "print(f\"Root Mean Squared Error: {rmse}\")\n",
+    "# Mean Average Percentage Error\n",
+    "from sklearn.metrics import mean_absolute_percentage_error\n",
+    "mape = mean_absolute_percentage_error(y_test, forecast)\n",
+    "print(f\"Mean Absolute Percentage Error: {mape}\")\n",
+    "\n",
+    "#stationarity == not stationary \n",
+    "#might want to do -- play with the 1,1,1 ---\n",
+    "# look at what is seasonal order is\n",
+    "#looks back and see what happened before, and uses that to predict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#will tell me automatically what tthe best parameters are based of the grid search\n",
+    "from pmdarima import auto_arima\n",
+    "\n",
+    "model = auto_arima(y_train, X_train seasonal=False, stepwise=True, suppress_warnings=True)\n",
+    "print(model.summary())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Compare AIC between one model versus the other, AIC is way to comparing models between \n",
+    "\n",
+    "\n",
+    "Train test split\n"
    ]
   }
  ],
